--- a/content/post/2020-12-08-weighting-classification-outcomes.Rmd
+++ b/content/post/2020-12-08-weighting-classification-outcomes.Rmd
@@ -280,7 +280,7 @@ conf_mats_df_obs_weights <- thresholds_unique_df %>%
   mutate(across(contains("conf"), list(metrics = ~map(.x, summary))))
 ```
 
-The results for 'value' appear somewhat similar but with a slightly higher and broader range for profitability:
+The results for 'value' appear largely similar (as in the previous section without weighting by `funded_amnt`):
 
 ```{r}
 conf_mats_df_obs_weights %>% 
